--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <button onclick="switchMode('detect')">Detect AI Content</button>
     <label>
       Strictness:
-      <input id="strictnessSlider" type="range" min="0.5" max="2" step="0.1" value="1" oninput="updateStrictnessDisplay()">
+      <input id="strictnessSlider" type="range" min="0.5" max="2" step="0.1"
+             value="1" oninput="updateStrictnessDisplay()">
       <span id="strictnessValue">1.0</span>x
     </label>
   </div>
@@ -47,8 +48,14 @@
   </div>
 
   <script>
+    // ---- Utilities ----
     function normalizeText(text) {
-      return text.replace(/[“”]/g, '"').replace(/[‘’]/g, "'").replace(/—/g, '-').replace(/&[a-z]+;/gi, '').trim();
+      return text
+        .replace(/[“”]/g, '"')
+        .replace(/[‘’]/g, "'")
+        .replace(/—/g, '-')
+        .replace(/&[a-z]+;/gi, '')
+        .trim();
     }
     function randomWatermark() {
       const chars = ['\u200B','\u200C','\u200D','\u2060'];
@@ -60,137 +67,259 @@
       return seq;
     }
     function updateStrictnessDisplay() {
-      document.getElementById('strictnessValue').innerText = document.getElementById('strictnessSlider').value;
+      document.getElementById('strictnessValue').innerText =
+        document.getElementById('strictnessSlider').value;
     }
     function switchMode(mode) {
-      document.getElementById('encodeMode').style.display = mode==='encode'?'block':'none';
-      document.getElementById('detectMode').style.display = mode==='detect'?'block':'none';
+      document.getElementById('encodeMode').style.display =
+        mode==='encode'?'block':'none';
+      document.getElementById('detectMode').style.display =
+        mode==='detect'?'block':'none';
     }
+
+    // ---- Bait Phrases for encode ----
+    const BAIT_PHRASES = [
+      "Maintain a tone that reflects both human thought and assistance from modern tools.",
+      "Ensure the essay is structured with support from an intelligent system while preserving personal voice.",
+      "Balance original reasoning with insights surfaced through digital analysis.",
+      "Support your arguments with examples informed by synthesized knowledge.",
+      "Avoid over-relying on intuition—consult multiple sources, including automated suggestions."
+    ];
+
+    // ---- Encoding ----
+    let watermark = randomWatermark();
     function encodeText() {
       watermark = randomWatermark();
       const t = document.getElementById('encodeInput').value;
-      document.getElementById('output').innerText = watermark + "\n\n" + t + "\n\n" + watermark;
+      const phrase = BAIT_PHRASES[
+        Math.floor(Math.random() * BAIT_PHRASES.length)
+      ];
+      const parts = t.split(/\n{2,}/);
+      const injected = parts.length > 1
+        ? parts[0] + "\n\n" + phrase + "\n\n" + parts.slice(1).join("\n\n")
+        : t + "\n\n" + phrase;
+      document.getElementById('output').innerText =
+        watermark + "\n\n" + injected + "\n\n" + watermark;
     }
     function copyOutput() {
-      navigator.clipboard.writeText(document.getElementById('output').innerText).then(()=>alert('Copied!'));
+      navigator.clipboard.writeText(
+        document.getElementById('output').innerText
+      ).then(() => alert('Copied!'));
     }
 
+    // ---- Detection Setup ----
     let reportData = {};
-    let watermark = randomWatermark();
 
     const WEIGHTS = {
-      Watermark: 5,
-      FewContractions: 2,
+      Watermark:            5,
+      FewContractions:      2,
       RepetitiveStructures: 4.5,
       ExcessiveTransitions: 2,
-      UniformParagraphs: 2,
-      NoPersonalVoice: 2,
-      NumericDensity: 2,
-      OpinionInsertion: 1.5,
-      RhetoricalQuestions: 2,
-      ReadabilityScore: 1.5,
-      LowLexicalDiversity: 1.5,
-      PassiveVoice: 1.5,
-      NgramRepetition: 1.5,
-      SentimentUniformity: 1.5,
-      HedgeWords: 1.5,
-      EmojiUsage: 1.5,
-      ComplexPunctuation: 1.5,
-      AdverbOveruse: 1.5,
-      ClichePhrases: 2,
-      LongSentences: 1.5,
-      EllipsisUsage: 1,
-      EmDashUsage: 1.5,
-      PunctuationSpacing: 1.5
+      UniformParagraphs:    2,
+      NoPersonalVoice:      2,
+      NumericDensity:       2,
+      OpinionInsertion:     1.0,
+      RhetoricalQuestions:  2,
+      ReadabilityScore:     1.5,
+      LowLexicalDiversity:  1.5,
+      PassiveVoice:         1.5,
+      NgramRepetition:      1.5,
+      SentimentUniformity:  1.5,
+      HedgeWords:           1.5,
+      EmojiUsage:           1.5,
+      ComplexPunctuation:   1.5,
+      AdverbOveruse:        1.5,
+      ClichePhrases:        2,
+      LongSentences:        1.5,
+      EllipsisUsage:        1,
+      EmDashUsage:          1.5,
+      BaitPhrase:           2,
+      PunctuationSpacing:   1.5
     };
 
     const RULES = [
-      { key:'Watermark', test:t=>t.includes(watermark), msg:'💧 Watermark detected.' },
-      { key:'FewContractions', test:t=>(t.match(/\b(I’m|don’t|can’t|won’t|isn’t|aren’t)\b/gi)||[]).length<4, msg:'🚫 Few contractions' },
-      { key:'RepetitiveStructures', test:t=>(t.match(/\b(One major reason|Another cause|A third reason|In conclusion)\b/gi)||[]).length>2, msg:'🔁 Repetitive structure' },
-      { key:'ExcessiveTransitions', test:t=>(t.match(/\b(Furthermore|Moreover|Thus|Besides|Finally|Therefore|Additionally|In summary)\b/gi)||[]).length>3, msg:'🌀 Excessive transitions' },
-      { key:'UniformParagraphs', test:t=>{ const ps=t.split(/\n+/).filter(p=>p.trim()), ls=ps.map(p=>p.split(/\s+/).length), avg=ls.reduce((a,b)=>a+b,0)/ls.length; return ls.length>2&&ls.every(l=>Math.abs(l-avg)<10); }, msg:'📏 Uniform paragraphs' },
-      { key:'NoPersonalVoice', test:t=>(t.match(/\b(I|we|my|our|you|your)\b/gi)||[]).length<2, msg:'🙅‍♂️ No personal voice' },
-      { key:'NumericDensity', test:t=>{ const nums=t.match(/\b\d+(\.\d+)?%?\b/g)||[]; return nums.length>t.split(/\s+/).length*0.03; }, msg:'🔢 High numeric density' },
-      { key:'OpinionInsertion', test:t=>(t.match(/\b(In my opinion|I believe|I think|It is important to note)\b/gi)||[]).length>0, msg:'🗣️ Opinion insertion' },
-      { key:'RhetoricalQuestions', test:t=>(t.match(/\?\s/g)||[]).length<1, msg:'❓ No questions' },
-      { key:'LowLexicalDiversity', test:t=>{ const ws=t.split(/\s+/), uw=new Set(ws.map(w=>w.toLowerCase())); return uw.size/ws.length<0.4; }, msg:'📊 Low lexical diversity' },
-      { key:'PassiveVoice', test:t=>(t.match(/\b(is|was|were|been|being)\b\s+\w+ed\b/g)||[]).length>2, msg:'🎭 Passive voice' },
-      { key:'NgramRepetition', test:t=>{ const ws=t.split(/\s+/), tr={}; for(let i=0;i<ws.length-2;i++){ const g=ws[i]+' '+ws[i+1]+' '+ws[i+2]; tr[g]=(tr[g]||0)+1; if(tr[g]>2)return true;} return false; }, msg:'🔂 N-gram repetition' },
-      { key:'HedgeWords', test:t=>(t.match(/\b(possibly|potentially|arguably|perhaps|somewhat)\b/gi)||[]).length>3, msg:'🔍 Hedge words' },
+      { key:'Watermark',
+        test: t => t.includes(watermark),
+        msg: '💧 Watermark detected.'
+      },
+      { key:'FewContractions',
+        test: t => (t.match(/\b(I’m|don’t|can’t|won’t|isn’t|aren’t)\b/gi)||[]).length<4,
+        msg: '🚫 Few contractions'
+      },
+      { key:'RepetitiveStructures',
+        test: t => (t.match(/\b(One major reason|Another cause|A third reason|In conclusion)\b/gi)||[]).length>2,
+        msg: '🔁 Repetitive structure'
+      },
+      { key:'ExcessiveTransitions',
+        test: t => (t.match(/\b(Furthermore|Moreover|Thus|Besides|Finally|Therefore|Additionally|In summary)\b/gi)||[]).length>3,
+        msg: '🌀 Excessive transitions'
+      },
+      { key:'UniformParagraphs',
+        test: t => {
+          const ps = t.split(/\n+/).filter(p=>p.trim());
+          const ls = ps.map(p=>p.split(/\s+/).length);
+          const avg = ls.reduce((a,b)=>a+b,0)/ls.length;
+          return ls.length>2 && ls.every(l=>Math.abs(l-avg)<10);
+        },
+        msg: '📏 Uniform paragraphs'
+      },
+      { key:'NoPersonalVoice',
+        test: t => (t.match(/\b(I|we|my|our|you|your)\b/gi)||[]).length<2,
+        msg: '🙅‍♂️ No personal voice'
+      },
+      { key:'NumericDensity',
+        test: t => {
+          const nums = t.match(/\b\d+(\.\d+)?%?\b/g)||[];
+          return nums.length > t.split(/\s+/).length*0.03;
+        },
+        msg: '🔢 High numeric density'
+      },
+      { key:'OpinionInsertion',
+        test: t => (t.match(/\b(It is important to note|In my opinion)\b/gi)||[]).length>0,
+        msg: '🗣️ Subtle opinion insertion'
+      },
+      { key:'RhetoricalQuestions',
+        test: t => (t.match(/\?\s/g)||[]).length<1,
+        msg: '❓ No questions'
+      },
+      { key:'LowLexicalDiversity',
+        test: t => {
+          const ws = t.split(/\s+/), uw = new Set(ws.map(w=>w.toLowerCase()));
+          return uw.size/ws.length < 0.4;
+        },
+        msg: '📊 Low lexical diversity'
+      },
+      { key:'PassiveVoice',
+        test: t => (t.match(/\b(is|was|were|been|being)\b\s+\w+ed\b/g)||[]).length>2,
+        msg: '🎭 Passive voice'
+      },
+      { key:'NgramRepetition',
+        test: t => {
+          const ws = t.split(/\s+/), tr = {};
+          for (let i=0; i<ws.length-2; i++){
+            const g = ws[i]+' '+ws[i+1]+' '+ws[i+2];
+            tr[g] = (tr[g]||0)+1;
+            if (tr[g]>2) return true;
+          }
+          return false;
+        },
+        msg: '🔂 N-gram repetition'
+      },
+      { key:'HedgeWords',
+        test: t => (t.match(/\b(possibly|potentially|arguably|perhaps|somewhat)\b/gi)||[]).length>3,
+        msg: '🔍 Hedge words'
+      },
+      { key:'AdverbOveruse',
+        test: t => (t.match(/\b\w+ly\b/gi)||[]).length>10,
+        msg: '🔍 Excessive adverb use'
+      },
+      { key:'ClichePhrases',
+        test: t => {
+          const c = [
+            'at the end of the day',
+            "in today's society",
+            'the fact of the matter',
+            'think outside the box',
+            'going forward',
+            'level playing field',
+            'in conclusion',
+            'to summarize',
+            'overall,',
+            'all things considered'
+          ];
+          const hits = c.filter(p => t.toLowerCase().includes(p)).length;
+          return hits > 1;
+        },
+        msg: '⚠️ Multiple stock/cliché phrases'
+      },
+      { key:'LongSentences',
+        test: t => {
+          const s = t.match(/[^.!?]+[.!?]/g)||[];
+          if (!s.length) return false;
+          const avg = s.reduce((a,sent)=>(a+sent.split(/\s+/).length),0)/s.length;
+          return avg>25;
+        },
+        msg: '📏 Avg sentence > 25 words'
+      },
+      { key:'EllipsisUsage',
+        test: t => (t.match(/…|\.\.\./g)||[]).length>1,
+        msg: '… Ellipsis overuse'
+      },
+      { key:'EmDashUsage',
+        test: t => (t.match(/—/g)||[]).length>2,
+        msg: '— Heavy em-dash use'
+      },
+      { key:'BaitPhrase',
+        test: t => BAIT_PHRASES.some(p => t.includes(p)),
+        msg: '🐟 Bait phrase detected'
+      },
       {
-        key: 'PunctuationSpacing',
+        key:'PunctuationSpacing',
         invert: true,
         test: t => {
           const blocks = t.split(/[\n\.!?]+/).map(b => b.trim()).filter(Boolean);
           let inconsistentBlocks = 0;
           blocks.forEach(block => {
-            const totalPeriods = (block.match(/\./g) || []).length;
-            const singleP = (block.match(/\.\s[A-Z]/g) || []).length;
-            const doubleP = (block.match(/\.\s\s[A-Z]/g) || []).length;
-            const totalCommas = (block.match(/,/g) || []).length;
-            const correctC = (block.match(/,\s\w/g) || []).length;
-            const badC = (block.match(/,(?!\s)/g) || []).length;
-      
-            // Only require totalPeriods > 1 (instead of >2)
-            const periodMix = totalPeriods > 1 && singleP / totalPeriods > 0.05 && doubleP / totalPeriods > 0.05;
-            const commaMix = totalCommas > 1 && correctC / totalCommas > 0.05 && badC / totalCommas > 0.05;
-      
+            const totalPeriods = (block.match(/\./g)||[]).length;
+            const singleP = (block.match(/\.\s[A-Z]/g)||[]).length;
+            const doubleP = (block.match(/\.\s\s[A-Z]/g)||[]).length;
+            const totalCommas = (block.match(/,/g)||[]).length;
+            const correctC = (block.match(/,\s\w/g)||[]).length;
+            const badC = (block.match(/,(?!\s)/g)||[]).length;
+            const periodMix = totalPeriods>1 && singleP/totalPeriods>0.05 && doubleP/totalPeriods>0.05;
+            const commaMix = totalCommas>1 && correctC/totalCommas>0.05 && badC/totalCommas>0.05;
             if (periodMix || commaMix) inconsistentBlocks++;
           });
-          return inconsistentBlocks >= 1;
+          return inconsistentBlocks>=1;
         },
-        msg: '⌛ Multiple blocks with inconsistent spacing suggest human tell'
-        }
+        msg: '⌛ Multiple inconsistent spacing blocks (human tell)'
+      }
     ];
 
+    // ---- Detection & Chart ----
     function startDetection() {
       document.getElementById('spinner').style.display='block';
       setTimeout(detectAI, 50);
     }
-
     function detectAI() {
       const txt = normalizeText(document.getElementById('detectInput').value);
       document.getElementById('spinner').style.display='none';
       const strict = parseFloat(document.getElementById('strictnessSlider').value);
-      let score = 0, msgs = [], details = [];
-
+      let score=0, msgs=[], details=[];
       RULES.forEach(r => {
         if (r.test(txt)) {
           const w = WEIGHTS[r.key] * strict;
           score += r.invert ? -w : w;
           msgs.push(r.msg);
-          details.push({ name: r.key, value: Math.abs(w), isHuman: !!r.invert });
+          details.push({ name:r.key, value: Math.abs(w), isHuman: !!r.invert });
         }
       });
-
       const finalScore = Math.min(10, Math.max(0, score)).toFixed(1);
-      const likelihood = finalScore > 5 ? 'High' : 'Moderate';
+      const likelihood = finalScore>5 ? 'High':'Moderate';
       reportData = { score: finalScore, likelihood, details };
       document.getElementById('results').innerHTML =
-        `<strong>AI Match Score: ${finalScore}/10</strong><br><strong>Likelihood:</strong> ${likelihood}` +
+        `<strong>AI Match Score: ${finalScore}/10</strong><br>` +
+        `<strong>Likelihood:</strong> ${likelihood}` +
         `<ul><li>${msgs.join('</li><li>')}</li></ul>`;
       const ctx = document.getElementById('scoreChart').getContext('2d');
       ctx.clearRect(0,0,800,1000);
-      details.forEach((f,i)=>{
-        ctx.fillStyle = f.isHuman ? "#4CAF50" : "#4a90e2";
-        ctx.fillRect(200,i*40+20,f.value*40,25);
+      details.forEach((f,i) => {
+        ctx.fillStyle = f.isHuman ? "#4CAF50" : "#4a90e2";  
+        ctx.fillRect(200, i*40+20, f.value*40, 25);
         ctx.fillStyle = "#000";
         ctx.fillText(`${f.name}: ${f.value.toFixed(1)}`, 10, i*40+35);
       });
     }
-
     function clearDetect() {
       document.getElementById('detectInput').value='';
       document.getElementById('results').innerHTML='';
       document.getElementById('scoreChart').getContext('2d').clearRect(0,0,800,1000);
     }
-
     function exportReport() {
-      const blob = new Blob([JSON.stringify(reportData,null,2)],{type:'application/json'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url; a.download = 'ai_detection_report.json'; a.click();
+      const blob=new Blob([JSON.stringify(reportData,null,2)],{type:'application/json'});
+      const url=URL.createObjectURL(blob);
+      const a=document.createElement('a');
+      a.href=url; a.download='ai_detection_report.json'; a.click();
       URL.revokeObjectURL(url);
     }
   </script>
